# heisenbux

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PORTFOLIO_PROPOSAL.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
cache/: VNQ.csv  VTV.csv
cache/cache/: VGT.csv  VOO.csv  VUG.csv
heisenbux/: __init__.py  cli.py  constants.py  download_vanguard.py  finance.py  plot.py  utils.py
heisenbux/cache/: BND.csv  VB.csv  VEA.csv  VTI.csv  VXUS.csv  VYM.csv  ^GSPC.csv
scripts/: check_all.sh
tests/: __init__.py  conftest.py  constants.py  helpers.py  test_version.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_data_sources.py
tests/unit/: __init__.py  test_cli.py  test_download_vanguard.py  test_finance.py  test_plot.py
